[package]
name = "counting-pointer"
version = "0.1.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

description = """
Provides structs of reference counting pointers. The perforance is better than 'std::rc::Rc' and than 'std::sync::Arc' by counting only the strong references but not weak the references.
"""

readme = "README.md"
categories = ["asynchronous", "memory-management"]
keywords = ["rc", "arc", "reference-count"]

license = "LGPL-3.0-or-later OR Apache-2.0 OR BSD-2-Clause"


[dependencies]

[dev-dependencies]
gharial = "0.3"
